--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "check-types": "turbo run check-types"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.29.7",
+    "@types/node": "^24.9.1",
     "prettier": "^3.6.2",
+    "tsx": "^4.20.6",
     "turbo": "^2.5.8",
     "typescript": "5.9.2"
   },
-  "packageManager": "pnpm@9.0.0",
+  "packageManager": "pnpm@10.19.0",
   "engines": {
     "node": ">=18"
   }
