--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "md": "tsx scripts/create-md.ts",
+    "move": "tsx scripts/changelog.ts packages/ritext",
+    "pub": "changeset && pnpm run md && turbo run build --filter=./packages/ritext && changeset version && pnpm run move && changeset publish"
   },
   "devDependencies": {
     "@changesets/cli": "^2.29.7",
