--- a/packages/ritext/package.json
+++ b/packages/ritext/package.json
@@ -79,6 +79,7 @@
   },
   "dependencies": {
     "@floating-ui/react": "^0.27.16",
+    "@tiptap/core": "^3.10.1",
     "@tiptap/extension-bold": "^3.10.1",
     "@tiptap/extension-document": "^3.10.1",
     "@tiptap/extension-italic": "^3.10.1",
