--- a/packages/ritext/package.json
+++ b/packages/ritext/package.json
@@ -66,40 +66,42 @@
     "url": "https://github.com/siamahnaf/ritext"
   },
   "devDependencies": {
-    "@eslint/js": "^9.39.1",
-    "@tailwindcss/postcss": "^4.1.17",
-    "@types/node": "^24",
+    "@eslint/js": "^9.39.2",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@types/node": "^25",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9.39.1",
+    "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "postcss": "^8.5.6",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "tailwindcss": "^4.1.17",
-    "tsup": "^8.5.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "tailwindcss": "^4.1.18",
+    "tsup": "^8.5.1",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.46.4"
+    "typescript-eslint": "^8.50.1"
   },
   "dependencies": {
     "@floating-ui/react": "^0.27.16",
-    "@tiptap/extension-bold": "^3.10.5",
-    "@tiptap/extension-document": "^3.10.5",
-    "@tiptap/extension-heading": "^3.10.5",
-    "@tiptap/extension-italic": "^3.10.5",
-    "@tiptap/extension-paragraph": "^3.10.5",
-    "@tiptap/extension-strike": "^3.10.5",
-    "@tiptap/extension-subscript": "^3.10.5",
-    "@tiptap/extension-superscript": "^3.10.5",
-    "@tiptap/extension-text": "^3.10.5",
-    "@tiptap/extension-underline": "^3.10.5",
-    "@tiptap/pm": "^3.10.5",
-    "@tiptap/react": "^3.10.5",
-    "@tiptap/starter-kit": "^3.10.5",
-    "motion": "^12.23.24",
+    "@tiptap/extension-bold": "^3.14.0",
+    "@tiptap/extension-document": "^3.14.0",
+    "@tiptap/extension-heading": "^3.14.0",
+    "@tiptap/extension-italic": "^3.14.0",
+    "@tiptap/extension-paragraph": "^3.14.0",
+    "@tiptap/extension-strike": "^3.14.0",
+    "@tiptap/extension-subscript": "^3.14.0",
+    "@tiptap/extension-superscript": "^3.14.0",
+    "@tiptap/extension-text": "^3.14.0",
+    "@tiptap/extension-text-style": "^3.14.0",
+    "@tiptap/extension-underline": "^3.14.0",
+    "@tiptap/extensions": "^3.14.0",
+    "@tiptap/pm": "^3.14.0",
+    "@tiptap/react": "^3.14.0",
+    "@tiptap/starter-kit": "^3.14.0",
+    "motion": "^12.23.26",
     "tailwind-merge": "^3.4.0"
   },
   "peerDependencies": {
