--- a/packages/ritext/package.json
+++ b/packages/ritext/package.json
@@ -77,31 +77,35 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "postcss": "^8.5.6",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "tailwindcss": "^4.1.18",
     "tsup": "^8.5.1",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.50.1"
+    "typescript-eslint": "^8.54.0"
   },
   "dependencies": {
-    "@floating-ui/react": "^0.27.16",
-    "@tiptap/extension-bold": "^3.14.0",
-    "@tiptap/extension-document": "^3.14.0",
-    "@tiptap/extension-heading": "^3.14.0",
-    "@tiptap/extension-italic": "^3.14.0",
-    "@tiptap/extension-paragraph": "^3.14.0",
-    "@tiptap/extension-strike": "^3.14.0",
-    "@tiptap/extension-subscript": "^3.14.0",
-    "@tiptap/extension-superscript": "^3.14.0",
-    "@tiptap/extension-text": "^3.14.0",
-    "@tiptap/extension-text-style": "^3.14.0",
-    "@tiptap/extension-underline": "^3.14.0",
-    "@tiptap/extensions": "^3.14.0",
-    "@tiptap/pm": "^3.14.0",
-    "@tiptap/react": "^3.14.0",
-    "@tiptap/starter-kit": "^3.14.0",
-    "motion": "^12.23.26",
+    "@floating-ui/react": "^0.27.17",
+    "@siamf/react-color-pick": "^1.5.4",
+    "@tiptap/extension-bold": "^3.18.0",
+    "@tiptap/extension-document": "^3.18.0",
+    "@tiptap/extension-heading": "^3.18.0",
+    "@tiptap/extension-italic": "^3.18.0",
+    "@tiptap/extension-link": "^3.18.0",
+    "@tiptap/extension-list": "^3.18.0",
+    "@tiptap/extension-paragraph": "^3.18.0",
+    "@tiptap/extension-strike": "^3.18.0",
+    "@tiptap/extension-subscript": "^3.18.0",
+    "@tiptap/extension-superscript": "^3.18.0",
+    "@tiptap/extension-text": "^3.18.0",
+    "@tiptap/extension-text-align": "^3.18.0",
+    "@tiptap/extension-text-style": "^3.18.0",
+    "@tiptap/extension-underline": "^3.18.0",
+    "@tiptap/extensions": "^3.18.0",
+    "@tiptap/pm": "^3.18.0",
+    "@tiptap/react": "^3.18.0",
+    "@tiptap/starter-kit": "^3.18.0",
+    "motion": "^12.29.2",
     "tailwind-merge": "^3.4.0"
   },
   "peerDependencies": {
