--- a/packages/ritext/package.json
+++ b/packages/ritext/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ritext",
-  "version": "1.0.23",
+  "version": "1.0.25",
   "description": "Ritext is a modern WYSIWYG rich text editor built with Tailwind CSS, powered by Tiptap. It offers a customizable UI and functional layer that lets you design your own editor controls and toolbars with clean, composable React components—no heavy UI, no extra dependencies beyond Tiptap.",
   "homepage": "https://ritext.vercel.app/",
   "main": "dist/index.js",
@@ -87,9 +87,15 @@
   "dependencies": {
     "@floating-ui/react": "^0.27.17",
     "@siamf/react-color-pick": "^1.5.4",
+    "@tiptap/extension-blockquote": "^3.18.0",
     "@tiptap/extension-bold": "^3.18.0",
     "@tiptap/extension-document": "^3.18.0",
+    "@tiptap/extension-drag-handle": "^3.18.0",
+    "@tiptap/extension-drag-handle-react": "^3.18.0",
+    "@tiptap/extension-emoji": "^3.18.0",
     "@tiptap/extension-heading": "^3.18.0",
+    "@tiptap/extension-horizontal-rule": "^3.18.0",
+    "@tiptap/extension-image": "^3.18.0",
     "@tiptap/extension-italic": "^3.18.0",
     "@tiptap/extension-link": "^3.18.0",
     "@tiptap/extension-list": "^3.18.0",
@@ -97,6 +103,7 @@
     "@tiptap/extension-strike": "^3.18.0",
     "@tiptap/extension-subscript": "^3.18.0",
     "@tiptap/extension-superscript": "^3.18.0",
+    "@tiptap/extension-table": "^3.18.0",
     "@tiptap/extension-text": "^3.18.0",
     "@tiptap/extension-text-align": "^3.18.0",
     "@tiptap/extension-text-style": "^3.18.0",
@@ -106,6 +113,8 @@
     "@tiptap/react": "^3.18.0",
     "@tiptap/starter-kit": "^3.18.0",
     "motion": "^12.29.2",
+    "prosemirror-view": "1.41.5",
+    "react-easy-crop": "^5.5.6",
     "tailwind-merge": "^3.4.0"
   },
   "peerDependencies": {
