--- a/packages/ritext/tsconfig.json
+++ b/packages/ritext/tsconfig.json
@@ -3,6 +3,7 @@
     "allowSyntheticDefaultImports": true,
     "declaration": true,
     "esModuleInterop": true,
+    "moduleResolution": "bundler",
     "lib": [
       "es5",
       "ES2015",
@@ -15,7 +16,6 @@
     ],
     "jsx": "react-jsx",
     "module": "ES2015",
-    "moduleResolution": "node",
     "noImplicitAny": true,
     "noUnusedLocals": true,
     "outDir": "dist/esm",
