--- a/packages/ritext/package.json
+++ b/packages/ritext/package.json
@@ -87,33 +87,32 @@
   "dependencies": {
     "@floating-ui/react": "^0.27.17",
     "@siamf/react-color-pick": "^1.5.4",
-    "@tiptap/extension-blockquote": "^3.18.0",
-    "@tiptap/extension-bold": "^3.18.0",
-    "@tiptap/extension-document": "^3.18.0",
-    "@tiptap/extension-drag-handle": "^3.18.0",
-    "@tiptap/extension-drag-handle-react": "^3.18.0",
-    "@tiptap/extension-emoji": "^3.18.0",
-    "@tiptap/extension-heading": "^3.18.0",
-    "@tiptap/extension-horizontal-rule": "^3.18.0",
-    "@tiptap/extension-image": "^3.18.0",
-    "@tiptap/extension-italic": "^3.18.0",
-    "@tiptap/extension-link": "^3.18.0",
-    "@tiptap/extension-list": "^3.18.0",
-    "@tiptap/extension-paragraph": "^3.18.0",
-    "@tiptap/extension-strike": "^3.18.0",
-    "@tiptap/extension-subscript": "^3.18.0",
-    "@tiptap/extension-superscript": "^3.18.0",
-    "@tiptap/extension-table": "^3.18.0",
-    "@tiptap/extension-text": "^3.18.0",
-    "@tiptap/extension-text-align": "^3.18.0",
-    "@tiptap/extension-text-style": "^3.18.0",
-    "@tiptap/extension-underline": "^3.18.0",
-    "@tiptap/extensions": "^3.18.0",
-    "@tiptap/pm": "^3.18.0",
-    "@tiptap/react": "^3.18.0",
-    "@tiptap/starter-kit": "^3.18.0",
+    "@tiptap/extension-blockquote": "^3.14.0",
+    "@tiptap/extension-bold": "^3.14.0",
+    "@tiptap/extension-document": "^3.14.0",
+    "@tiptap/extension-drag-handle": "3.14.0",
+    "@tiptap/extension-drag-handle-react": "3.14.0",
+    "@tiptap/extension-emoji": "^3.14.0",
+    "@tiptap/extension-heading": "^3.14.0",
+    "@tiptap/extension-horizontal-rule": "^3.14.0",
+    "@tiptap/extension-image": "^3.14.0",
+    "@tiptap/extension-italic": "^3.14.0",
+    "@tiptap/extension-link": "^3.14.0",
+    "@tiptap/extension-list": "^3.14.0",
+    "@tiptap/extension-paragraph": "^3.14.0",
+    "@tiptap/extension-strike": "^3.14.0",
+    "@tiptap/extension-subscript": "^3.14.0",
+    "@tiptap/extension-superscript": "^3.14.0",
+    "@tiptap/extension-table": "^3.14.0",
+    "@tiptap/extension-text": "^3.14.0",
+    "@tiptap/extension-text-align": "^3.14.0",
+    "@tiptap/extension-text-style": "^3.14.0",
+    "@tiptap/extension-underline": "^3.14.0",
+    "@tiptap/extensions": "^3.14.0",
+    "@tiptap/pm": "^3.14.0",
+    "@tiptap/react": "^3.14.0",
+    "@tiptap/starter-kit": "^3.14.0",
     "motion": "^12.29.2",
-    "prosemirror-view": "1.41.5",
     "react-easy-crop": "^5.5.6",
     "tailwind-merge": "^3.4.0"
   },
