--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -67,7 +67,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
-    "@tailwindcss/postcss": "^4.1.18",
+    "@tailwindcss/postcss": "^4.2.0",
     "@types/node": "^25",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -79,43 +79,49 @@
     "postcss": "^8.5.6",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "tailwindcss": "^4.1.18",
+    "tailwindcss": "^4.2.0",
     "tsup": "^8.5.1",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.54.0"
+    "typescript-eslint": "^8.56.0"
   },
   "dependencies": {
-    "@floating-ui/react": "^0.27.17",
+    "@floating-ui/react": "^0.27.18",
     "@siamf/react-color-pick": "^1.5.4",
-    "@tiptap/extension-blockquote": "^3.14.0",
-    "@tiptap/extension-bold": "^3.14.0",
-    "@tiptap/extension-document": "^3.14.0",
-    "@tiptap/extension-drag-handle": "3.14.0",
-    "@tiptap/extension-drag-handle-react": "3.14.0",
-    "@tiptap/extension-emoji": "^3.14.0",
-    "@tiptap/extension-hard-break": "3.14.0",
-    "@tiptap/extension-heading": "^3.14.0",
-    "@tiptap/extension-horizontal-rule": "^3.14.0",
-    "@tiptap/extension-image": "^3.14.0",
-    "@tiptap/extension-italic": "^3.14.0",
-    "@tiptap/extension-link": "^3.14.0",
-    "@tiptap/extension-list": "^3.14.0",
-    "@tiptap/extension-paragraph": "^3.14.0",
-    "@tiptap/extension-strike": "^3.14.0",
-    "@tiptap/extension-subscript": "^3.14.0",
-    "@tiptap/extension-superscript": "^3.14.0",
-    "@tiptap/extension-table": "^3.14.0",
-    "@tiptap/extension-text": "^3.14.0",
-    "@tiptap/extension-text-align": "^3.14.0",
-    "@tiptap/extension-text-style": "^3.14.0",
-    "@tiptap/extension-underline": "^3.14.0",
-    "@tiptap/extensions": "^3.14.0",
-    "@tiptap/pm": "^3.14.0",
-    "@tiptap/react": "^3.14.0",
-    "@tiptap/starter-kit": "^3.14.0",
-    "motion": "^12.29.2",
+    "@tiptap/extension-blockquote": "^3.20.0",
+    "@tiptap/extension-bold": "^3.20.0",
+    "@tiptap/extension-collaboration": "^3.20.0",
+    "@tiptap/extension-document": "^3.20.0",
+    "@tiptap/extension-drag-handle": "^3.20.0",
+    "@tiptap/extension-drag-handle-react": "^3.20.0",
+    "@tiptap/extension-emoji": "^3.20.0",
+    "@tiptap/extension-hard-break": "3.20.0",
+    "@tiptap/extension-heading": "^3.20.0",
+    "@tiptap/extension-horizontal-rule": "^3.20.0",
+    "@tiptap/extension-image": "^3.20.0",
+    "@tiptap/extension-italic": "^3.20.0",
+    "@tiptap/extension-link": "^3.20.0",
+    "@tiptap/extension-list": "^3.20.0",
+    "@tiptap/extension-node-range": "^3.20.0",
+    "@tiptap/extension-paragraph": "^3.20.0",
+    "@tiptap/extension-strike": "^3.20.0",
+    "@tiptap/extension-subscript": "^3.20.0",
+    "@tiptap/extension-superscript": "^3.20.0",
+    "@tiptap/extension-table": "^3.20.0",
+    "@tiptap/extension-text": "^3.20.0",
+    "@tiptap/extension-text-align": "^3.20.0",
+    "@tiptap/extension-text-style": "^3.20.0",
+    "@tiptap/extension-underline": "^3.20.0",
+    "@tiptap/extensions": "^3.20.0",
+    "@tiptap/core": "^3.20.0",
+    "@tiptap/pm": "^3.20.0",
+    "@tiptap/react": "^3.20.0",
+    "@tiptap/suggestion": "^3.20.0",
+    "@tiptap/y-tiptap": "^3.0.2",
+    "motion": "^12.34.3",
     "react-easy-crop": "^5.5.6",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.5.0",
+    "y-protocols": "^1.0.7",
+    "yjs": "^13.6.29"
   },
   "peerDependencies": {
     "react": "^19",
